# hdf-eos5-rs

./: .gitattributes  .gitignore  CITATION.cff  Cargo.toml  README.md
hdf-eos5-sys/: Cargo.toml  build.rs  wrapper.h
hdf-eos5-sys/hdf-eos5-2.0/: Makefile  Makefile.am  Makefile.in  config.status  configure  configure.ac  libtool
hdf-eos5-sys/hdf-eos5-2.0/config/: include.am
hdf-eos5-sys/hdf-eos5-2.0/doc/: Makefile  Makefile.am  Makefile.in  README
hdf-eos5-sys/hdf-eos5-2.0/gctp/: Makefile  Makefile.am  Makefile.in
hdf-eos5-sys/hdf-eos5-2.0/gctp/include/: Makefile  Makefile.am  Makefile.in
hdf-eos5-sys/hdf-eos5-2.0/gctp/src/: Makefile  Makefile.am  Makefile.in  for_init.c  gctp.c  inv_init.c  stplnfor.c  stplninv.c
hdf-eos5-sys/hdf-eos5-2.0/gctp/src/.deps/: alberfor.Plo  alberinv.Plo  alconfor.Plo  alconinv.Plo  azimfor.Plo  aziminv.Plo  bceafor.Plo  bceainv.Plo  br_gctp.Plo  ceafor.Plo  ceainv.Plo  cproj.Plo  eqconfor.Plo  eqconinv.Plo  equifor.Plo  equiinv.Plo  for_init.Plo  gctp.Plo  gnomfor.Plo  gnominv.Plo  goodfor.Plo  goodinv.Plo  gvnspfor.Plo  gvnspinv.Plo  hamfor.Plo  haminv.Plo  imolwfor.Plo  imolwinv.Plo  inv_init.Plo  isinusfor.Plo  isinusinv.Plo  lamazfor.Plo  lamazinv.Plo  lamccfor.Plo  lamccinv.Plo  merfor.Plo  merinv.Plo  millfor.Plo  millinv.Plo  molwfor.Plo  (+35 more)
hdf-eos5-sys/hdf-eos5-2.0/include/: HE5_GctpFunc.h  HE5_HdfEosDef.h  HE5_config.h  HE5_config.h.in  Makefile  Makefile.am  Makefile.in  stamp-h1
hdf-eos5-sys/hdf-eos5-2.0/m4/: stdinc.m4  stdlib.m4
hdf-eos5-sys/hdf-eos5-2.0/samples/: Makefile  Makefile.am  Makefile.in  README  fixedBuoy0.txt  floatBuoy0.txt  floatBuoy1.txt  he5_gd_datainfo.c  he5_gd_defexternalfld.c  he5_gd_definefields.c  he5_gd_definefieldsF_32.f  he5_gd_definefieldsF_64.f  he5_gd_defunlimfld.c  he5_gd_info.c  he5_gd_infoF_32.f  he5_gd_infoF_64.f  he5_gd_rdexternaldata.c  he5_gd_readdata.c  he5_gd_readdataF_32.f  he5_gd_readdataF_64.f  he5_gd_setup.c  he5_gd_setupF_32.f  he5_gd_setupF_64.f  he5_gd_subset.c  he5_gd_subsetF_32.f  he5_gd_subsetF_64.f  he5_gd_wrexternaldata.c  he5_gd_writedata.c  he5_gd_writedataF_32.f  he5_gd_writedataF_64.f  he5_gd_wrunlimfld.c  he5_pt_datainfo.c  he5_pt_datainfoF_32.f  he5_pt_datainfoF_64.f  he5_pt_definelevels.c  he5_pt_definelevelsF_32.f  he5_pt_definelevelsF_64.f  he5_pt_readattrs.c  he5_pt_readattrsF_32.f  he5_pt_readattrsF_64.f  (+73 more)
hdf-eos5-sys/hdf-eos5-2.0/samples/.deps/: he5_gd_datainfo.Po  he5_pt_datainfo.Po  he5_za_datainfo.Po
hdf-eos5-sys/hdf-eos5-2.0/src/: EHapi.c  GDapi.c  HE5common.c  Makefile  Makefile.am  Makefile.in  PTapi.c  SWapi.c  TSapi.c  ZAapi.c
hdf-eos5-sys/hdf-eos5-2.0/src/.deps/: EHapi.Plo  GDapi.Plo  HE5common.Plo  PTapi.Plo  SWapi.Plo  TSapi.Plo  ZAapi.Plo
hdf-eos5-sys/hdf-eos5-2.0/testdrivers/: Makefile  Makefile.am  Makefile.in  README
hdf-eos5-sys/hdf-eos5-2.0/testdrivers/grid/: Makefile  Makefile.am  Makefile.in  TestGrid.c  hdfeos5_64.inc  testgrid32.f  testgrid64.f  testgrid_szip32.f  testgrid_szip64.f
hdf-eos5-sys/hdf-eos5-2.0/testdrivers/point/: Makefile  Makefile.am  Makefile.in  TestPoint.c  fixedBuoy1.txt  simple.txt  testpoint32.f  testpoint64.f
hdf-eos5-sys/hdf-eos5-2.0/testdrivers/swath/: Makefile  Makefile.am  Makefile.in  TestSwath.c  testswath32.f  testswath64.f
hdf-eos5-sys/hdf-eos5-2.0/testdrivers/threads/: Makefile  Makefile.am  Makefile.in  he5_gd_threads-1.c  he5_gd_threads-2.c  he5_pt_threads-1.c  he5_pt_threads-2.c  he5_sw_threads-1.c  he5_sw_threads-2.c
hdf-eos5-sys/hdf-eos5-2.0/testdrivers/za/: Makefile  Makefile.am  Makefile.in  TestAlias.c  TestZa.c  testza32.f  testza64.f
hdf-eos5-sys/src/: bindings.rs  lib.rs  wrapper.h
src/: lib.rs
