# GCTP include directory Makefile.am

# Boilerplate definitions
include $(top_srcdir)/config/include.am

# Install these header files.
## Note that there are some files in hdfeos5/include with the same names.
## This doesn't currently cause problems, but could in the future.
include_HEADERS = bcea.h cproj.h cproj_prototypes.h gctp_prototypes.h proj.h isin.h

